<resources>
    <string name="app_name">CHAT</string>
    <string name="username">USERNAME</string>
    <string name="new_account">NEW ACCOUNT</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="register">Register</string>
    <string name="login">LOGIN</string>
    <string name="chat_app">CHAT APPLICATION</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_a_message">Send a Message...</string>
    <string name="message">Message....</string>
    <string name="profile">PROFILE</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="search">Search..</string>
    <string name="seen">Seen</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="change_password">Change Password</string>
</resources>
